tests/org.eclipse.php.core.tests/workspace/errors/php54/testTraitReferenceError1.pdtt
--TEST--
Test trait reference error check
--FILE--
<?php
trait TFoo {
}

interface Bar1 extends TFoo {
}

class Bar2 extends TFoo implements TFoo {

    use TFoo;
    use Bar1;

}

$t = new TFoo();
echo $t;
--EXPECT--
[line=5, start=45, end=49] The type TFoo cannot be a superinterface of Bar1; a superinterface must be an interface
[line=8, start=74, end=78] The type TFoo cannot be the superclass of Bar2; a superclass must be a class
[line=8, start=90, end=94] The type TFoo cannot be a superinterface of Bar2; a superinterface must be an interface
[line=11, start=120, end=124] Cannot use Bar1; it is not a trait
[line=15, start=139, end=143] Cannot instantiate the type TFoo